--- a/API_Testing__In_Python.ipynb
+++ b/API_Testing__In_Python.ipynb
@@ -105,7 +105,7 @@
         "colab_type": "text"
       },
       "source": [
-        "##**Requesting Data via n API call**\n",
+        "##**Requesting Data via API call**\n",
         "\n",
         "Github's API allows you to request a wide variety of information from the site through API call. To see what an APi looks like, enter the following in your browser URL bar.(https://api.github.com/search/repositories?q=language:python&sort=stars)\n",
         "\n",
@@ -123,7 +123,7 @@
         "##**API Call details**\n",
         "https://api.github.com/search/repositories?q=language:python&sort=stars\n",
         "\n",
-        "1. The APi call returns the bumber of python  peoject currently hosted on Github\n",
+        "1. The APi call returns the bumber of python  project currently hosted on Github\n",
         "2. The first part: https://api.github.com directs the request to the art of the website that responds to API calls. \n",
         "3. The next part: /search/repositorires/ tell API to conduct search thru ALL repos on github.  \n",
         "4. The Question mark after repos is th \"q\" stands for query and \"=\" begins the query parameters **(q=)**\n",
@@ -153,7 +153,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 105
+          "height": 104
         },
         "outputId": "a162b0d3-484c-4683-99ce-aaa120cef893"
       },
@@ -232,6 +232,200 @@
       },
       "source": [
         "NOTES: simple calls like this should return complete results, when writing mpore complciated programs, checking the status code makes a lot of sense. "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "5hQ34DZxuTVm",
+        "colab_type": "text"
+      },
+      "source": [
+        "##**Working with the response dictionary** \n",
+        "\n",
+        "Now that we have the infromation from the API call stored as a dictionary, we can work with the data stored there. Lets generate some output that summarizes the information "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "x4Bd-c6ZZHVb",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 1000
+        },
+        "outputId": "a9a8213e-2f5d-41fc-d531-485f35898feb"
+      },
+      "source": [
+        "import requests \n",
+        "\n",
+        "# Make an API call  and store the response #\n",
+        "url = 'https://api.github.com/search/repositories?q=language:python&sort=stars'\n",
+        "r = requests.get(url)\n",
+        "print(\"Status code:\", r.status_code)\n",
+        "\n",
+        "# store api response in a variable #\n",
+        "response_dict = r.json()\n",
+        "print(\"total Repositories:\", response_dict['total_count'])  # print the value of total count which represents the total count of repositories on github #\n",
+        "\n",
+        "# Explore information about the repositories #\n",
+        "repo_dicts = response_dict['items']\n",
+        "print(\"Repositories Returned:\", len(repo_dicts))\n",
+        "\n",
+        "# Examine the first repository #\n",
+        "repo_dict = repo_dicts[0]\n",
+        "print(\"\\nKeys:\", len(repo_dict))\n",
+        "for key in sorted(repo_dict.keys()):\n",
+        "  print(key) "
+      ],
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Status code: 200\n",
+            "total Repositories: 4548374\n",
+            "Repositories Returned: 30\n",
+            "\n",
+            "Keys: 74\n",
+            "archive_url\n",
+            "archived\n",
+            "assignees_url\n",
+            "blobs_url\n",
+            "branches_url\n",
+            "clone_url\n",
+            "collaborators_url\n",
+            "comments_url\n",
+            "commits_url\n",
+            "compare_url\n",
+            "contents_url\n",
+            "contributors_url\n",
+            "created_at\n",
+            "default_branch\n",
+            "deployments_url\n",
+            "description\n",
+            "disabled\n",
+            "downloads_url\n",
+            "events_url\n",
+            "fork\n",
+            "forks\n",
+            "forks_count\n",
+            "forks_url\n",
+            "full_name\n",
+            "git_commits_url\n",
+            "git_refs_url\n",
+            "git_tags_url\n",
+            "git_url\n",
+            "has_downloads\n",
+            "has_issues\n",
+            "has_pages\n",
+            "has_projects\n",
+            "has_wiki\n",
+            "homepage\n",
+            "hooks_url\n",
+            "html_url\n",
+            "id\n",
+            "issue_comment_url\n",
+            "issue_events_url\n",
+            "issues_url\n",
+            "keys_url\n",
+            "labels_url\n",
+            "language\n",
+            "languages_url\n",
+            "license\n",
+            "merges_url\n",
+            "milestones_url\n",
+            "mirror_url\n",
+            "name\n",
+            "node_id\n",
+            "notifications_url\n",
+            "open_issues\n",
+            "open_issues_count\n",
+            "owner\n",
+            "private\n",
+            "pulls_url\n",
+            "pushed_at\n",
+            "releases_url\n",
+            "score\n",
+            "size\n",
+            "ssh_url\n",
+            "stargazers_count\n",
+            "stargazers_url\n",
+            "statuses_url\n",
+            "subscribers_url\n",
+            "subscription_url\n",
+            "svn_url\n",
+            "tags_url\n",
+            "teams_url\n",
+            "trees_url\n",
+            "updated_at\n",
+            "url\n",
+            "watchers\n",
+            "watchers_count\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "i0L0S-yKjWnF",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 225
+        },
+        "outputId": "0ae6b928-af3f-497e-b968-71bc840f54e8"
+      },
+      "source": [
+        "import requests \n",
+        "\n",
+        "# Make an API call  and store the response #\n",
+        "url = 'https://api.github.com/search/repositories?q=language:python&sort=stars'\n",
+        "r = requests.get(url)\n",
+        "print(\"Status code:\", r.status_code)\n",
+        "\n",
+        "# store api response in a variable #\n",
+        "response_dict = r.json()\n",
+        "print(\"total Repositories:\", response_dict['total_count'])  # print the value of total count which represents the total count of repositories on github #\n",
+        "\n",
+        "# Explore information about the repositories #\n",
+        "repo_dicts = response_dict['items']\n",
+        "print(\"Repositories Returned:\", len(repo_dicts))\n",
+        "\n",
+        "# Examine the first repository #\n",
+        "repo_dict = repo_dicts[0]\n",
+        "print(\"\\nSelected information about the 1st repository: \")\n",
+        "print('Name: ', repo_dict['name'])\n",
+        "print('Owner:', repo_dict['owner']['login'])\n",
+        "print('Stars:', repo_dict['stargazers_count'])\n",
+        "print('Repository:', repo_dict['html_url'])\n",
+        "print('Created:', repo_dict['created_at'])\n",
+        "print('Updated:', repo_dict['updated_at'])\n",
+        "print('decription:', repo_dict['description'])"
+      ],
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Status code: 200\n",
+            "total Repositories: 4469446\n",
+            "Repositories Returned: 30\n",
+            "\n",
+            "Selected information about the 1st repository: \n",
+            "Name:  system-design-primer\n",
+            "Owner: donnemartin\n",
+            "Stars: 77552\n",
+            "Repository: https://github.com/donnemartin/system-design-primer\n",
+            "Created: 2017-02-26T16:15:28Z\n",
+            "Updated: 2019-12-04T20:01:42Z\n",
+            "decription: Learn how to design large-scale systems. Prep for the system design interview.  Includes Anki flashcards.\n"
+          ],
+          "name": "stdout"
+        }
       ]
     }
   ]
