--- a/API_Data_Visualization.ipynb
+++ b/API_Data_Visualization.ipynb
@@ -44,13 +44,29 @@
       "metadata": {
         "id": "avu-Nu_vktC1",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 105
+        },
+        "outputId": "b0771ab2-46fb-4a87-b5b6-3a2e295eee2e"
       },
       "source": [
         "!pip install pygal  # install pygal #"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Collecting pygal\n",
+            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/5f/b7/201c9254ac0d2b8ffa3bb2d528d23a4130876d9ba90bc28e99633f323f17/pygal-2.4.0-py2.py3-none-any.whl (127kB)\n",
+            "\u001b[K     |████████████████████████████████| 133kB 2.6MB/s \n",
+            "\u001b[?25hInstalling collected packages: pygal\n",
+            "Successfully installed pygal-2.4.0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -72,11 +88,11 @@
       "metadata": {
         "id": "mUCbS2FwlGwf",
         "colab_type": "code",
+        "outputId": "4df6345c-8e71-4d11-fece-8c5b1cf493cf",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 52
-        },
-        "outputId": "a2debc8b-7ef2-40dd-989a-4c9eb43c1df4"
+        }
       },
       "source": [
         "# Make an API call  and store the response #\n",
@@ -107,13 +123,13 @@
         "chart.render_to_file('python_repos.svg')\n",
         "# see chart in drive, labeled, \"python_repos.svg\""
       ],
-      "execution_count": 24,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Status code: 200\n",
-            "total Repositories: 4552578\n"
+            "total Repositories: 4581263\n"
           ],
           "name": "stdout"
         }
@@ -137,11 +153,11 @@
       "metadata": {
         "id": "3k8WdBL2aaNN",
         "colab_type": "code",
+        "outputId": "0ef64bf8-6840-4624-b90f-3fd3ebfa73f9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 52
-        },
-        "outputId": "cec4858c-3448-4f32-8ac6-ab3328e500d7"
+        }
       },
       "source": [
         "# Make an API call  and store the response #\n",
@@ -183,16 +199,26 @@
         "chart.render_to_file('python_repos.svg')\n",
         "# see chart in drive, labeled, \"python_repos.svg\""
       ],
-      "execution_count": 26,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Status code: 200\n",
-            "total Repositories: 4552672\n"
+            "total Repositories: 4581266\n"
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "9RBMG7WlDrWe",
+        "colab_type": "text"
+      },
+      "source": [
+        "# New Section"
       ]
     },
     {
