--- a/Python_HTTP_Requests_for_Humans.ipynb
+++ b/Python_HTTP_Requests_for_Humans.ipynb
@@ -286,7 +286,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 51
+          "height": 52
         },
         "outputId": "58a54942-c16d-4d94-be13-99a0272c53e0"
       },
@@ -316,6 +316,229 @@
             "success\n"
           ],
           "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ZGkE9cgJ_5fN",
+        "colab_type": "text"
+      },
+      "source": [
+        "#**API Content**\n",
+        "\n",
+        "The reponse of the HTTP API GET request has some valuable information i.e..Payload in the message body. Using the attributes of Response, you can view the payload in many different formats.\n",
+        "\n",
+        "Bytes (.Content)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Hq3p3UtyBIW-",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "response = requests.get('https://api.github.com')\n",
+        "response.content  # give you the content in raw bytes of the response payload"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_yQypRyFBiZn",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "response.text # convert into a string using encoding like UTF-8"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "9QA-56HyC48o",
+        "colab_type": "text"
+      },
+      "source": [
+        "Decoding bytes to a string requires an encoding scheme. request will try to guess encoding based upon the response headers if not specified.  Set encoding BEFORE accessing .text"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2bwpo7nVCQnL",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "response.encoding = 'utf-8'  #optional enciding parameter.  requests infers this\n",
+        "response.text"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "oeLRGuUPDz4V",
+        "colab_type": "text"
+      },
+      "source": [
+        "##**Serialized JSON content** \n",
+        "Hey look Ma, it's JSON.....Let's view some rea-life JSON \n",
+        "\n",
+        "![alt text](https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQt00IECBfWRzEFyW6D6dDnCvjuEt4MlTdF3WYi0IWg-_12ayXM&s)\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SEiZH3f2EQTL",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 585
+        },
+        "outputId": "ed5a1161-47aa-477c-c1c9-fc4e0a45fb42"
+      },
+      "source": [
+        "response.json()  # this will show you serialized JSON content (See below).  to get a dictionary, you could take the str you received from .text and deserialize it (json.loads()) \n",
+        "# much simplier to use .json(). the \"type\" of the return value .json() is a dictionary so you can access values i the object via the 'key'"
+      ],
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'authorizations_url': 'https://api.github.com/authorizations',\n",
+              " 'code_search_url': 'https://api.github.com/search/code?q={query}{&page,per_page,sort,order}',\n",
+              " 'commit_search_url': 'https://api.github.com/search/commits?q={query}{&page,per_page,sort,order}',\n",
+              " 'current_user_authorizations_html_url': 'https://github.com/settings/connections/applications{/client_id}',\n",
+              " 'current_user_repositories_url': 'https://api.github.com/user/repos{?type,page,per_page,sort}',\n",
+              " 'current_user_url': 'https://api.github.com/user',\n",
+              " 'emails_url': 'https://api.github.com/user/emails',\n",
+              " 'emojis_url': 'https://api.github.com/emojis',\n",
+              " 'events_url': 'https://api.github.com/events',\n",
+              " 'feeds_url': 'https://api.github.com/feeds',\n",
+              " 'followers_url': 'https://api.github.com/user/followers',\n",
+              " 'following_url': 'https://api.github.com/user/following{/target}',\n",
+              " 'gists_url': 'https://api.github.com/gists{/gist_id}',\n",
+              " 'hub_url': 'https://api.github.com/hub',\n",
+              " 'issue_search_url': 'https://api.github.com/search/issues?q={query}{&page,per_page,sort,order}',\n",
+              " 'issues_url': 'https://api.github.com/issues',\n",
+              " 'keys_url': 'https://api.github.com/user/keys',\n",
+              " 'label_search_url': 'https://api.github.com/search/labels?q={query}&repository_id={repository_id}{&page,per_page}',\n",
+              " 'notifications_url': 'https://api.github.com/notifications',\n",
+              " 'organization_repositories_url': 'https://api.github.com/orgs/{org}/repos{?type,page,per_page,sort}',\n",
+              " 'organization_url': 'https://api.github.com/orgs/{org}',\n",
+              " 'public_gists_url': 'https://api.github.com/gists/public',\n",
+              " 'rate_limit_url': 'https://api.github.com/rate_limit',\n",
+              " 'repository_search_url': 'https://api.github.com/search/repositories?q={query}{&page,per_page,sort,order}',\n",
+              " 'repository_url': 'https://api.github.com/repos/{owner}/{repo}',\n",
+              " 'starred_gists_url': 'https://api.github.com/gists/starred',\n",
+              " 'starred_url': 'https://api.github.com/user/starred{/owner}{/repo}',\n",
+              " 'team_url': 'https://api.github.com/teams',\n",
+              " 'user_organizations_url': 'https://api.github.com/user/orgs',\n",
+              " 'user_repositories_url': 'https://api.github.com/users/{user}/repos{?type,page,per_page,sort}',\n",
+              " 'user_search_url': 'https://api.github.com/search/users?q={query}{&page,per_page,sort,order}',\n",
+              " 'user_url': 'https://api.github.com/users/{user}'}"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 18
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "2SaLF8JDZvnC",
+        "colab_type": "text"
+      },
+      "source": [
+        "**NOTE**: you can do a alot with status codes and message bodies, but in order to get more infomration, like METADATA about the response itself, you will need to review the response headers. "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "y012rcnXaLcD",
+        "colab_type": "text"
+      },
+      "source": [
+        "##**API Response Headers**\n",
+        "\n",
+        "The repsonse headers can provide lots of useful information such as content-type of the response payload, time-limit on how long to Cache the response etc..The View these headers, access (.headers)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "IA-pTr1DafPb",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 54
+        },
+        "outputId": "5586570d-ca95-4935-cef3-2ceff368e401"
+      },
+      "source": [
+        "response.headers"
+      ],
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'Date': 'Thu, 19 Dec 2019 16:50:49 GMT', 'Content-Type': 'application/json; charset=utf-8', 'Transfer-Encoding': 'chunked', 'Server': 'GitHub.com', 'Status': '200 OK', 'X-RateLimit-Limit': '60', 'X-RateLimit-Remaining': '56', 'X-RateLimit-Reset': '1576776440', 'Cache-Control': 'public, max-age=60, s-maxage=60', 'Vary': 'Accept, Accept-Encoding', 'ETag': 'W/\"307bf49b7e1b8e6fe4ef622d609665e1\"', 'X-GitHub-Media-Type': 'github.v3; format=json', 'Access-Control-Expose-Headers': 'ETag, Link, Location, Retry-After, X-GitHub-OTP, X-RateLimit-Limit, X-RateLimit-Remaining, X-RateLimit-Reset, X-OAuth-Scopes, X-Accepted-OAuth-Scopes, X-Poll-Interval, X-GitHub-Media-Type', 'Access-Control-Allow-Origin': '*', 'Strict-Transport-Security': 'max-age=31536000; includeSubdomains; preload', 'X-Frame-Options': 'deny', 'X-Content-Type-Options': 'nosniff', 'X-XSS-Protection': '1; mode=block', 'Referrer-Policy': 'origin-when-cross-origin, strict-origin-when-cross-origin', 'Content-Security-Policy': \"default-src 'none'\", 'Content-Encoding': 'gzip', 'X-GitHub-Request-Id': 'D50A:3BB23:2B6E60A:34358A4:5DFBAA69'}"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 20
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zxMe9X_h8Kl7",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "97cba4fc-badc-4b5a-847f-583eb4022e77"
+      },
+      "source": [
+        "response.headers['content-Type']  # Accesing the key to content-type METADATA header.   NOT Case sensitive"
+      ],
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'application/json; charset=utf-8'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 21
         }
       ]
     }
