--- a/HTTP_Requests_for_Humans.ipynb
+++ b/HTTP_Requests_for_Humans.ipynb
@@ -1032,6 +1032,121 @@
           "execution_count": 51
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "475PHPu9nLgJ",
+        "colab_type": "text"
+      },
+      "source": [
+        "You can see from the response that the server received your request data and headers as you sent,  requests also provides this infomration to you in a form of a PreparedRequests. "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "bbQ73y_Qnzr2",
+        "colab_type": "text"
+      },
+      "source": [
+        "#**Inspecting the Request**\n",
+        "\n",
+        "When you make a request, the requests library prepares the request before actually sending to the destination server, preperation includes things such as \"**header-validation**\" and **serialization** of the data (*JSON Content)*. \n",
+        "\n",
+        "You can access the **PreparedRequests**  by accessing .request"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "CDgqLAwrpvZn",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "0f8057b6-8a77-4293-f961-db35d1370015"
+      },
+      "source": [
+        "response = requests.post('https://httpbin.org/post', json={'key':'value'})\n",
+        "response.request.headers['Content-type']"
+      ],
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'application/json'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 55
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4jBcPbE_qVMI",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "bd12c730-769b-4360-821a-4bcd82d2ff81"
+      },
+      "source": [
+        "response.request.url"
+      ],
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'https://httpbin.org/post'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 53
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gwRGF53zqnfB",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "caf9d3eb-d106-499a-e389-3572af00d1fe"
+      },
+      "source": [
+        "response.request.body"
+      ],
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "b'{\"key\": \"value\"}'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 56
+        }
+      ]
     }
   ]
 }
